--- a/app/src/main/res/layout/fragment_jog_info.xml
+++ b/app/src/main/res/layout/fragment_jog_info.xml
@@ -67,22 +67,22 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/clicked_item_distance"
+
+                android:id="@+id/jogDistance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_size_clicked_job_fields"
                 tools:text="100.000 km" />
 
             <TextView
-                android:id="@+id/etClickedItemTime"
+                android:id="@+id/jogTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:textSize="@dimen/text_size_clicked_job_fields"
                 tools:text="60:60:60" />
 
             <TextView
-                android:id="@+id/date"
+                android:id="@+id/jogDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_size_clicked_job_fields"
