--- a/app/src/main/res/layout/fragment_jog_info.xml
+++ b/app/src/main/res/layout/fragment_jog_info.xml
@@ -19,7 +19,7 @@
             app:menu="@menu/toolbar_menu"
             app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
             app:titleTextAppearance="@style/ToolbarText"
-            tools:title="Toolbar Name" />
+            app:title="@string/jog_info" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
