--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_marginBottom="25dp"
         android:gravity="center_vertical|center_horizontal"
-        android:text="Login"
+        android:text="@string/login"
         android:textAlignment="center"
         android:textSize="30sp" />
 
@@ -19,12 +17,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:text="UUID" />
+        android:text="@string/uuid" />
 
     <EditText
         android:id="@+id/uuidEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="hello"
         android:layout_marginHorizontal="30dp"
         android:layout_marginBottom="30dp"/>
 
@@ -32,7 +31,6 @@
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/login"
         android:layout_marginHorizontal="30dp"/>
-
 </LinearLayout>
