--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="backgroundColor">#302E2E</color>
+    <color name="textColor">#FFFFFF</color>
+    <color name="buttonBackgroundTint">#4C4A4A</color>
+    <color name="backgroundSubToolbar">#4C4A4A</color>
 </resources>
